# first_mlops

./: digits_par_jean-michel_version_0.3b.ipynb  iris.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: data_d-checkpoint.ipynb  digits_par_jean-michel_version_0.3b-checkpoint.ipynb  iris-checkpoint.ipynb
