[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["tristancals <tristancals38@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
